k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  labels:
    service: java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      service: java-app
  template:
    metadata:
      labels:
        service: java-app
    spec:
      containers:
        - name: java-app
          image: csindenis/java-app:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "300Mi"
              cpu: "300m"
